working version under windows

--- a/first_author_papers.bib
+++ b/first_author_papers.bib
@@ -3,6 +3,7 @@
   title = {Applications Du Formalisme Des Faisceaux Gaussiens {\`a} La Mod{\'e}lisation de l'interaction d'une Onde {\'E}lectromagn{\'e}tique Avec Un Objet {{3D}} Complexe},
   author = {Hillairet, Julien},
   year = {2007},
+  url = {http://thesesups.ups-tlse.fr/111/},
   copyright = {All rights reserved},
   school = {Universit{\'e} de Toulouse III - Paul Sabatier - U.F.R. P.C.A.}
 }
@@ -189,6 +190,8 @@
   author = {Hillairet, Julien and Goniche, Marc and Fil, Nicolas and Belhaj, Mohamed and Puech, J{\'e}r{\^o}me},
   year = {2017},
   month = apr,
+  url = {https://hal-cea.archives-ouvertes.fr/cea-01612959},
+  urldate = {2020-01-16},
   abstract = {Magnetic confinement fusion researches are an approach to demonstrate the feasibility of nuclear fusion power for energy production. In these experiments, mega-watt range power Radio-Frequency waves, from tens of MHz to hundreds of GHz, are injected into magnetically confined plasmas in order to increase its temperature and to extend its duration. These RF systems are subjected to the magnetic field environment of the experiments, ranging from few tenth of Tesla to Tesla, and various orientations depending of their locations. As these RF systems made of copper, silver or ceramics are located in vacuum environments, they are subject to multipactor discharges. These discharges are generally considered detrimental since they can lead to detuned RF systems, limit the RF power transmission in the plasma and eventually damage RF sources or components. In some case, especially in the MHz range of frequency, multipactor discharges can be desired for vacuum conditioning. This paper presents the various RF systems used in magnetic fusion experiments and review the work performed in the fusion research community on multipactor discharges for high power coaxial (MHz) and rectangular waveguides (GHz) transmission lines, with their practical implications on power delivery into the plasma.},
   copyright = {All rights reserved},
   file = {C\:\\Users\\JH218595\\Zotero\\storage\\5NDK3YGM\\Hillairet et al_2017_Multipactor in High Power Radio-Frequency Systems for Nuclear Fusion.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\NAMNKTV8\\cea-01612959.html},
@@ -243,7 +246,8 @@
   title = {Protecting {{Fusion Reactors}} from {{Extreme Heat}}},
   author = {Hillairet, Julien and Chen, Zhaoxi and Gerardin, Jonathan and Aumenier, Marie-H{\'e}l{\`e}ne},
   year = {2019},
-  pages = {4},
+  volume = {XIII},
+  url = {https://www.ansys.com/about-ansys/advantage-magazine/volume-xiii-issue-1-2019/protecting-fusion-reactors-from-extreme-heat},
   copyright = {All rights reserved},
   file = {C\:\\Users\\JH218595\\Documents\\Bibliography\\Papers\\Fusion\\Hillairet et al._2019_Protecting Fusion Reactors from Extreme Heat.pdf;C\:\\Users\\JH218595\\Zotero\\storage\\2ICXYC2X\\Hillairet - 2019 - Protecting Fusion Reactors from Extreme Heat.pdf},
   journal = {ANSYS Advantage},
