--- a/master.tex
+++ b/master.tex
@@ -23,8 +23,7 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 			citestyle=numeric-comp,
 			bibstyle=authoryear]{styles/kaobiblio}
 % Bibliography files
-\addbibresource{HDR.bib}
-%\addbibresource{references.bib}
+\addbibresource{references.bib}
 
 % Use the "none" sorting for the document
 \assignrefcontextentries[]{*}
@@ -159,22 +158,22 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 	
 	\mainmatter % Denotes the start of the main document content, resets page numbering and uses arabic numbers
 	
-%	\input{tex/intro.tex}
-%	
-%	% % Page avec titre seul
-%	%\pagelayout{wide} % No margins
-%	%\addpart{intro}
-%	%\pagelayout{margin} % Restore margins
-%	
+	\input{tex/intro.tex}
+	
+	 % Page avec titre seul
+	\pagelayout{wide} % No margins
+	\addpart{intro}
+	\pagelayout{margin} % Restore margins
+	
 	\input{tex/chap1.tex}
-%	
-%	\input{tex/chap2.tex}
-%	
-%	\input{tex/chap3.tex}
-%	
-%	\input{tex/chap4.tex}
-%	
-%	%----------------------------APPENDIX------------------------------------------------------------
+	
+	\input{tex/chap2.tex}
+	
+	\input{tex/chap3.tex}
+	
+	\input{tex/chap4.tex}
+	
+	%----------------------------APPENDIX------------------------------------------------------------
 	\appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
 	
 	\pagelayout{wide} % No margins
@@ -184,6 +183,9 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 %	\input{tex/annexe1.tex}
 %	
 %	\input{tex/annexe2.tex}
+	
+	% Bibliography of my 1st author publications
+	%\input{tex/perso_biblio.tex}
 	
 	%----------------------------------------------------------------------------------------
 	
@@ -195,10 +197,9 @@ numbers=noenddot, % Comment to output dots after chapter numbers; the most commo
 	%	BIBLIOGRAPHY
 	%----------------------------------------------------------------------------------------
 	
-	% The bibliography needs to be compiled with biber using your LaTeX editor, or on the command line with 'biber main' from the template directory
-	
-	% Use the "nyt" sorting for the bibliography
+	% The bibliography needs to be compiled with biber 	
 	\defbibnote{bibnote}{Here are the references in alphabetical order.\par\bigskip} % Prepend this text to the bibliography
+	% Use the "nyt" sorting for the bibliography
 	\begin{refcontext}[sorting=nyt]
 		\printbibliography[heading=bibintoc, title=Bibliography, prenote=bibnote] 
 	\end{refcontext}
