--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -7,3 +7,5 @@
 bla bla
 
 \sidecite{semenov2007-1}
+
+Magnetic confinement fusion researches is the most advanced technique to master nuclear fusion for energy production. One of the main requirements for achieving fusion is to heat the plasma particles to temperatures exceeding 100-200 million of degrees (10-20 keV). Electromagnetic waves in mega-watt range of power, from tens of MHz to hundreds of GHz, are launched by antennas located near the plasma periphery in order to increase the plasma temperature and extend its duration \sidecite{cairns1991}. 
