--- a/tex/chap3.tex
+++ b/tex/chap3.tex
@@ -4,6 +4,12 @@
 
 \section{Multipactor}
 
+
+Magnetic Fusion RF antennas are generally made of copper or silver-coated stainless steels located in vacuum environments. The vacuum sealing with pressurized transmission lines is made with the help of ceramics such as alumina, aluminium nitride, beryllium oxide or diamond. 
+
+All these components are subject to multipactor discharges which increases the electron population (via secondary emission and gas desorption) which in turn may ultimately lead to an avalanche effect and the development of a discharge even at pressures two order of magnitude below Paschen breakdown limit [2]. These discharges are generally considered detrimental since they can lead to detuned RF systems, limit the RF power transmission in the plasma and eventually damage RF sources or components. When not detected quickly enough, arcs can lead to surface erosion [3], dielectric components metallisation [4] or water/air leaks due to punctured components such as bellows [5] or vacuum windows [6–8]. In some cases however, multipactor-induced discharges can be desired for vacuum RF conditioning during short RF pulses and at moderate power [3,4,9,10]. Moreover, these RF systems are subjected to the high magnetic field environment of the experiments in the Tesla range. The presence of magnetic field affects the electron trajectories and thus the multipactor resonances. On tokamaks, the electron motion is strongly constrained around the magnetic field lines which reduce the effects of loss mechanisms such as diffusion and increases electron impact ionization and thus the build-up of glow discharges. Finally, at the difference of RF payloads in satellite, the antenna surfaces can be polluted during operation with particles resulting from the strong interaction of the energetic particles with the walls of the tokamak, which may alter the surface characteristics such as secondary emission. This paper reviews the work performed in the fusion research community on multipactor discharges for two kinds of RF systems with their practical implications on power delivery into the plasma. The Ion Cyclotron Resonance Heating (ICRH), which uses coaxial lines in the MHz range of frequency, is presented in the next section. The Lower Hybrid Current Drive (LHCD) systems, which uses rectangular waveguides in the GHz range of frequency is discussed in section 3. 
+
+
 \section{RF Devices}
 
 \subsection{Mode Converter}
