minor modif on chap1.tex

--- a/tex/chap1.tex
+++ b/tex/chap1.tex
@@ -41,7 +41,7 @@ Therefore, the D-T reaction leads to a total released energy of $E_{DT}$ = 17.59
 
 The fusion power per unit volume $p_{DT}$ produced by the fusion of the nuclei of deuterium and tritium reads: 
 \begin{equation*}
-	p_{DT} = n_D n_T \left< \sigma v \right>_{DT} E_{DT}
+	P_{fus} = n_D n_T \left< \sigma v \right>_{DT} E_{DT}
 \end{equation*}
 with $n_D$ and $n_T$ the deuterium and tritium density and $\left< \sigma v \right>_{DT}$ the D-T reactivity. 
 
@@ -59,17 +59,17 @@ with $n$ the electron density, then the thermonuclear power density is:
 p_{DT} = \frac{1}{4} n^2 \left< \sigma v \right>_{DT} E_{DT}
 \end{equation*}
 
-Assuming a constant reactivity in the plasma ("flat profile hypothesis") and using the tore volume $V$, the fusion power is: 
-\begin{equation}
-P_{fus} = \frac{V}{4}
-n^2 \left< \sigma v \right>_{DT} E_{DT}
-\end{equation}
-
-In the temperature range 10.3-18.5 keV, it turns out that the reactivity $\left< \sigma v \right>_{DT}$ can well (with about 10$\%$ error) be approximated by \sidecite{wesson2011}: 
-\begin{equation*}
-	\left< \sigma v \right>_{DT} \approx 1.18\, 10^{-24}\; \hat T^2 \;\si{\left[m^3 s^{-1}\right]}
-\end{equation*}
-where $\hat T$ is expressed in $\si{keV}$.
+%Assuming a constant reactivity in the plasma ("flat profile hypothesis") and using the tore volume $V$, the fusion power is: 
+%\begin{equation}
+%P_{fus} = \frac{V}{4}
+%n^2 \left< \sigma v \right>_{DT} E_{DT}
+%\end{equation}
+%
+%For a circular cross-section, the plasma volume is $V=2\pi^2 R a^2$. The reactivity $\left< \sigma v \right>_{DT}$ depends on the temperature. In the temperature range 10.3-18.5 keV, it turns out that the reactivity $\left< \sigma v \right>_{DT}$ can well (with about 10$\%$ error) be approximated by \sidecite{wesson2011}: 
+%\begin{equation*}
+%	\left< \sigma v \right>_{DT} \approx 1.18\, 10^{-24}\; \hat T^2 \;\si{\left[m^3 s^{-1}\right]}
+%\end{equation*}
+%where $\hat T$ is expressed in $\si{keV}$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Magnetic Controlled Fusion}
